--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -79,8 +79,8 @@
     <div class="content">
         <div class="contact-details">
             <p><strong>Name:</strong> Himaja S</p>
-            <p><strong>Email:</strong> himaja252@gmail.com</p>
-            <p><strong>Phone:</strong> 9742146497</p>
+            <p><strong>Email:</strong> ******@gmail.com</p>
+            <p><strong>Phone:</strong> **********/p>
         </div>
         <div class="social-icons">
             <a href="https://github.com/himaja252" class="fa fa-github"></a>
